--- a/DataStructurePractice/DataStructurePractice.vcxproj
+++ b/DataStructurePractice/DataStructurePractice.vcxproj
@@ -143,10 +143,11 @@
     <ClCompile Include="DataStructurePractice.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="CircularQueue_Array.h" />
+    <ClInclude Include="QueueCircular_Array.h" />
     <ClInclude Include="I_Queue.h" />
     <ClInclude Include="I_Stack.h" />
     <ClInclude Include="Node_Mono.h" />
+    <ClInclude Include="Queue_Linked.h" />
     <ClInclude Include="reference.h" />
     <ClInclude Include="Stack_Array.h" />
     <ClInclude Include="Stack_Linked.h" />
