--- a/DataStructurePractice/DataStructurePractice.vcxproj
+++ b/DataStructurePractice/DataStructurePractice.vcxproj
@@ -143,14 +143,14 @@
     <ClCompile Include="DataStructurePractice.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="QueueCircular_Array.h" />
-    <ClInclude Include="I_Queue.h" />
-    <ClInclude Include="I_Stack.h" />
-    <ClInclude Include="Node_Mono.h" />
-    <ClInclude Include="Queue_Linked.h" />
+    <ClInclude Include="QueueCircularByArray.h" />
+    <ClInclude Include="IQueue.h" />
+    <ClInclude Include="IStack.h" />
+    <ClInclude Include="NodeMono.h" />
+    <ClInclude Include="QueueByLinked.h" />
     <ClInclude Include="reference.h" />
-    <ClInclude Include="Stack_Array.h" />
-    <ClInclude Include="Stack_Linked.h" />
+    <ClInclude Include="StackByArray.h" />
+    <ClInclude Include="StackByLinked.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
