--- a/DataStructurePractice/DataStructurePractice.vcxproj.filters
+++ b/DataStructurePractice/DataStructurePractice.vcxproj.filters
@@ -32,25 +32,25 @@
     <ClInclude Include="reference.h">
       <Filter>소스 파일</Filter>
     </ClInclude>
-    <ClInclude Include="I_Stack.h">
+    <ClInclude Include="IStack.h">
       <Filter>소스 파일\stack</Filter>
     </ClInclude>
-    <ClInclude Include="Stack_Array.h">
+    <ClInclude Include="StackByArray.h">
       <Filter>소스 파일\stack</Filter>
     </ClInclude>
-    <ClInclude Include="Stack_Linked.h">
+    <ClInclude Include="StackByLinked.h">
       <Filter>소스 파일\stack</Filter>
     </ClInclude>
-    <ClInclude Include="Node_Mono.h">
+    <ClInclude Include="NodeMono.h">
       <Filter>소스 파일\node</Filter>
     </ClInclude>
-    <ClInclude Include="I_Queue.h">
+    <ClInclude Include="IQueue.h">
       <Filter>소스 파일\queue</Filter>
     </ClInclude>
-    <ClInclude Include="QueueCircular_Array.h">
+    <ClInclude Include="QueueCircularByArray.h">
       <Filter>소스 파일\queue</Filter>
     </ClInclude>
-    <ClInclude Include="Queue_Linked.h">
+    <ClInclude Include="QueueByLinked.h">
       <Filter>소스 파일\queue</Filter>
     </ClInclude>
   </ItemGroup>
